# plutus

./: .gitignore  ARCHITECTURE.adoc  cabal.project  cabal.project.freeze  default.nix  hie.yaml  iohk-nix.json  lib.nix  ormolu.json  refactoring.md  stack.yaml
.devcontainer/: Dockerfile
deployment/nixops/: default.nix  server.nix
deployment/terraform/: loadbalancing.tf  marlowe-symbolic-lambda.tf
language-plutus-core/: language-plutus-core.cabal
language-plutus-core/src/Language/: PlutusCore.hs
language-plutus-core/test/Normalization/: Type.hs
marlowe/: Sem.md  marlowe.cabal
marlowe-playground-client/: deps.nix  grammar.ne  package.json  packages.dhall  spago-packages.nix  webpack.config.js  yarn.nix
marlowe-playground-client/src/: Main.purs  MainFrame.purs  MonadApp.purs  Reachability.purs  Simulation.purs  Types.purs  Wallet.purs
marlowe-playground-client/src/Marlowe/: Blockly.purs  Gen.purs  Holes.purs  Linter.purs  Parser.purs  Semantics.purs  Term.purs
marlowe-playground-client/src/Simulation/: AccountIdEditor.purs  Analysis.purs  Common.purs  Holes.purs  InputComposer.purs  Refactoring.purs  State.purs  StateTable.purs  TransactionComposer.purs  Types.purs
marlowe-playground-client/static/: main.scss
marlowe-playground-client/static/css/: main-tabs.css  main.scss  panels.css
marlowe-playground-client/test/Marlowe/: BlocklyTests.purs  ContractTests.purs  ParserTests.purs
marlowe-playground-server/: marlowe-playground-server.cabal  playground.yaml.sample
marlowe-playground-server/app/: PSGenerator.hs  Types.hs  Webserver.hs
marlowe-playground-server/src/: API.hs  Server.hs  WebSocket.hs
marlowe-playground-server/src/Marlowe/: Config.hs
marlowe-symbolic/: lambda.nix  marlowe-symbolic.cabal
marlowe-symbolic/app/: Main.hs
marlowe-symbolic/src/: Lib.hs  Main.hs
marlowe-symbolic/src/Language/Marlowe/: Semantics.hs  Util.hs
marlowe-symbolic/src/Language/Marlowe/Analysis/: FSMap.hs  FSSemantics.hs  FSSet.hs  IntegerArray.hs  MkSymb.hs  Numbering.hs
marlowe-symbolic/src/Marlowe/Symbolic/Types/: API.hs  Error.hs  Request.hs  Response.hs
marlowe-symbolic/src/Types/: API.hs  Error.hs  Request.hs  Response.hs
marlowe-vscode/: CHANGELOG.md  README.md  extension.js  package.json  packages.dhall
marlowe-vscode/src/: Main.purs
marlowe-vscode/src/VsCode/: Commands.purs  ExtensionContext.purs  Window.purs
marlowe-vscode/syntaxes/: marlowe.json
marlowe/src/Language/: Marlex.hs
marlowe/test/: Spec.hs
nix/: ghc-8.6.4.nix  haskell.nix  purescript.nix  z3.nix
nix/overlays/: musl.nix
nix/stack.materialized/: plutus-contract.nix  plutus-scb.nix
pkgs/: default.nix
playground-common/src/: Auth.hs
playground-common/src/Schema/: IOTS.hs
playground-common/src/Servant/: Prometheus.hs
playground-common/test/Schema/: IOTSSpec.hs
plutus-book/: plutus-book.cabal
plutus-book/doc/: 03-UTXO.adoc
plutus-contract/: plutus-contract.cabal
plutus-contract/src/Plutus/: Trace.hs
plutus-contract/test/Spec/: Contract.hs  State.hs
plutus-core/: plutus-core.cabal
plutus-core-interpreter/test/: CekMachine.hs
plutus-core-interpreter/test/DynamicBuiltins/: Common.hs  Definition.hs  Logging.hs
plutus-core/budgeting-bench/: Bench.hs
plutus-core/docs/ethereum-gas-metering/: Makefile  main.bib  main.md
plutus-core/plutus-ir-test/: TestLib.hs
plutus-emulator/: plutus-emulator.cabal
plutus-exe/src/: Main.hs
plutus-ghc-stub/: plutus-ghc-stub.cabal
plutus-ir/: plutus-ir.cabal
plutus-ir/src/Language/: PlutusIR.hs
plutus-ir/test/: Spec.hs  TestLib.hs  TypeSpec.hs
plutus-ir/test/datatypes/: bindDataTypeNormalize.golden
plutus-ir/test/errors/: recursiveTypeBind
plutus-ir/test/lets/: rectypebind.golden
plutus-ir/test/type-errors/: conflictingRecursiveBinds  conflictingRecursiveBinds.golden  duplicateDataConstrs  duplicateDataConstrs.golden  duplicateTypeConstrs  duplicateTypeConstrs.golden  nonSelfRecursive  nonSelfRecursive.golden  wrongDataConstrReturnType  (+1 more)
plutus-merklisation/: plutus-merklisation.cabal
plutus-merklisation-exe/: plutus-merklisation-exe.cabal
plutus-merklisation-exe/src/: AstCompression.hs  CompressionAnalysis.hs  DumpPlc.hs  TypeMerklisation.hs  TypeSizes.hs
plutus-merklisation/src/Language/PlutusCore/: Untyped.hs
plutus-merklisation/src/Language/PlutusCore/Erasure/Untyped/: CBOR.hs  CBOR2.hs  Convert.hs  DeBruijn.hs  Term.hs
plutus-merklisation/src/Language/PlutusCore/Erasure/Untyped/Constant/: Typed.hs
plutus-merklisation/src/Language/PlutusCore/Erasure/Untyped/Constant/Dynamic/: Instances.hs
plutus-merklisation/src/Language/PlutusCore/Evaluation/Machine/Untyped/: Cek.hs
plutus-merklisation/src/Language/PlutusCore/Merkle/: CBOR.hs  Merklisable.hs  Merklise.hs  PLCSize.hs
plutus-merklisation/src/Language/PlutusCore/Untyped/: CBOR.hs  CBOR2.hs  Constant.hs  Convert.hs  DeBruijn.hs  MkPlc.hs  Term.hs  View.hs
plutus-merklisation/src/Language/PlutusCore/Untyped/Constant/: Apply.hs  Dynamic.hs  Make.hs  Name.hs  Typed.hs
plutus-merklisation/src/Language/PlutusCore/Untyped/Constant/Dynamic/: Instances.hs
plutus-merklisation/src/Language/PlutusCore/Untyped/Evaluation/: CkMachine.hs  MachineException.hs  Result.hs
plutus-merklisation/src/Language/PlutusCore/Untyped/Instance/: Eq.hs  Pretty.hs  Recursive.hs
plutus-merklisation/src/Language/PlutusCore/Untyped/Instance/Pretty/: Classic.hs  Common.hs  Default.hs  Plc.hs  Readable.hs
plutus-playground-lib/: plutus-playground-lib.cabal
plutus-playground-server/: plutus-playground-server.cabal
plutus-playground-server/usecases/: CrowdFunding.hs  ErrorHandling.hs  Game.hs  Messages.hs  Vesting.hs
plutus-scb/: plutus-scb.cabal
plutus-scb-client/src/: MainFrame.purs  Types.purs  View.purs
plutus-scb/app/: Main.hs  PSGenerator.hs
plutus-scb/currency-contract/: Main.hs
plutus-tutorial/doc/: 03-wallet-api.adoc
plutus-tx/: plutus-tx.cabal
plutus-tx-plugin/: plutus-tx-plugin.cabal
plutus-use-cases/: plutus-use-cases.cabal
plutus-use-cases/test/: Spec.hs
plutus-wallet-api/ledger/: LedgerBytes.hs
web-common/: deps.nix
(+142 files in other folders)
