name:                   marlowe-symbolic
version:                0.3.0.0
license:                BSD3
license-file:           LICENSE
author:                 Alexander Nemish
maintainer:             alexander.nemish@iohk.io
build-type:             Simple
extra-source-files:     README.md
cabal-version:          >= 1.10

executable marlowe-symbolic
    default-language:   Haskell2010
    build-depends:      aeson >= 1.4.2.0,
                        aws-lambda-haskell-runtime >= 2.0.1,
                        base >=4.9,
                        mtl,
                        containers,
                        text,
                        sbv >= 8.4,
                        time,
                        QuickCheck,
                        tasty,
                        tasty-hunit,
                        tasty-smallcheck,
                        tasty-quickcheck,
                        template-haskell
    other-modules:
                        Lib
                        Language.Marlowe
                        Language.Marlowe.Semantics
                        Language.Marlowe.Util
                        Language.Marlowe.Analysis.FSSet
                        Language.Marlowe.Analysis.FSSemantics
                        Language.Marlowe.Analysis.IntegerArray
                        Language.Marlowe.Analysis.Numbering
                        Language.Marlowe.Analysis.MkSymb
    hs-source-dirs:     src
    main-is:            Main.hs
