name:                   marlowe-symbolic
version:                0.3.0.0
license:                BSD3
license-file:           LICENSE
author:                 Alexander Nemish
maintainer:             alexander.nemish@iohk.io
build-type:             Simple
extra-source-files:     README.md
cabal-version:          >= 1.10

library
    exposed-modules:
        Lib
        Marlowe.Symbolic.Types.Error
        Marlowe.Symbolic.Types.Request
        Marlowe.Symbolic.Types.Response
        Marlowe.Symbolic.Types.API
        Language.Marlowe
        Language.Marlowe.Semantics
        Language.Marlowe.Util
        Language.Marlowe.Analysis.FSSet
        Language.Marlowe.Analysis.FSSemantics
        Language.Marlowe.Analysis.IntegerArray
        Language.Marlowe.Analysis.Numbering
        Language.Marlowe.Analysis.MkSymb
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends:      aeson >= 1.4.2.0,
                        aws-lambda-haskell-runtime >= 2.0.1,
                        base >=4.9,
                        mtl,
                        containers,
                        text,
                        sbv >= 8.4,
                        time,
                        QuickCheck,
                        servant,
                        servant-client -any,
                        tasty,
                        tasty-hunit,
                        tasty-smallcheck,
                        tasty-quickcheck,
                        template-haskell


executable marlowe-symbolic
    default-language:   Haskell2010
    build-depends:      aws-lambda-haskell-runtime >= 2.0.1,
                        base >=4.9,
                        marlowe-symbolic
    hs-source-dirs:     app
    main-is:            Main.hs
